# tree-sitter-alfa

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  config.json  example-file  example-file.alfa  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-alfa.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_alfa/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterAlfa/: alfa.h
bindings/swift/TreeSitterAlfaTests/: TreeSitterAlfaTests.swift
queries/: highlights.scm  locals.scm
src/: grammar.json  node-types.json  parser.c
