[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-alfa"
description = "Abbreviated Language for Authorization Version 1.0"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "alfa"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Rifa Achrinza", email = "" }]
requires-python = ">=3.9"
license.text = "GPL-2.0-or-later"
readme = "README.md"

[project.urls]
Homepage = "https://git.sr.ht/~achrinza/tree-sitter-alfa"

[project.optional-dependencies]
core = ["tree-sitter~=0.22"]

[tool.cibuildwheel]
build = "cp39-*"
build-frontend = "build"
